# vulkan-study

./: CMakeLists.txt  GLSL メモ.txt  Vim キー操作メモ.txt  Vulkan メソッドなど.txt  Vulkan メモ.txt  main.cpp  shader.vert  shader.vert.spv
memo/: .$回転で√2が現れる理由.drawio.bkp  GLFW メソッドなど.txt  GLFW メモ.txt  Vim キー操作メモ.txt  Vulkan メソッドなど.txt  Vulkan メモ.txt  回転で√2が現れる理由.drawio
shaders/: vert.spv
